--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,7 @@
+:root {
+  --type-first: Helvetica, Arial, sans-serif;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -11,9 +15,34 @@ body {
 img {
   display: block;
   max-width: 100%;
+  width: auto;
+  height: auto;
 }
 
 .container {
   max-width: 50rem;
+  padding: 0 1rem;
   margin: 0 auto;
+}
+
+.title {
+  font-family: var(--font-title);
+  line-height: 1;
+  font-size: 3rem;
+  margin: 1rem 0;
+  position: relative;
+  z-index: 1;
+}
+
+.title::after {
+  content: "";
+  display: block;
+  width: 1.5rem;
+  height: 1.5rem;
+  background-color: #fb1;
+  position: absolute;
+  bottom: 5px;
+  left: -5px;
+  border-radius: 0.2rem;
+  z-index: -1;
 }
