--- a/src/app/login/login.module.css
+++ b/src/app/login/login.module.css
@@ -5,8 +5,8 @@
 }
 
 .imagemDog {
-  height: calc(100vh);
-  background: url('/assets/login.jpg') no-repeat 50%;
+  min-height: calc(100vh);
+  background: url("/assets/login.jpg") no-repeat 50%;
   background-size: cover;
 }
 
@@ -18,4 +18,58 @@
 .form {
   display: grid;
   gap: 1rem;
+  margin-bottom: 2rem;
+}
+
+.lostPassword {
+  display: block;
+  margin-bottom: 4rem;
+}
+
+.registerContainer p {
+  margin-bottom: 1.5rem;
+}
+
+.formSubtitle {
+  font-family: var(--font-title);
+  line-height: 1;
+  font-size: 2rem;
+  margin-bottom: 2rem;
+  position: relative;
+  z-index: 1;
+}
+
+.formSubtitle::after {
+  content: "";
+  display: block;
+  width: 5rem;
+  height: 0.5rem;
+  border-radius: 0.2rem;
+  background-color: #ddd;
+}
+
+.buttonRegister {
+  display: block;
+  font-size: 1rem;
+  font-family: var(--type-first);
+  cursor: pointer;
+  border-radius: 0.4rem;
+  background-color: #fb1;
+  color: #764701;
+  padding: 0.8rem 1.2rem;
+  box-sizing: border-box;
+  transition: 0.1s;
+  width: max-content;
+  margin-bottom: 4rem;
+}
+
+.buttonRegister:hover,
+.buttonRegister:focus {
+  outline: none;
+  box-shadow: 0 0 0 3px #fea, 0 0 0 4px #fb1;
+}
+
+.buttonRegister:disabled {
+  opacity: 0.5;
+  cursor: wait;
 }
