--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,6 +1,9 @@
 .header {
   padding: 0 1rem;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  position: fixed;
+  width: 100%;
+  background-color: #fff;
 }
 
 .header nav {
@@ -13,4 +16,10 @@
 .login {
   display: flex;
   gap: 0.5rem;
+}
+
+@media (max-width: 40rem) {
+  .header {
+    padding: 0;
+  }
 }
