Adjustments and Routes

--- a/src/components/Form/Input.module.css
+++ b/src/components/Form/Input.module.css
@@ -20,3 +20,9 @@
   background-color: #fff;
   box-shadow: 0 0 0 3px #fea;
 }
+
+.error {
+  color: #f31;
+  font-size: .875rem;
+  margin-top: .25rem;
+}
