--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,6 @@
 :root {
   --type-first: Helvetica, Arial, sans-serif;
+  --type-second: var(--type-second), Arial, sans-serif;
 }
 
 * {
@@ -11,6 +12,7 @@
 body {
   font-family: var(--type-first);
   color: #333;
+  padding-top: 4rem;
 }
 
 img {
@@ -26,13 +28,16 @@ img {
   margin: 0 auto;
 }
 
+.mainContainer {
+  margin-top: 4rem;
+}
+
 .title {
-  font-family: var(--font-title);
+  font-family: var(--type-second);
   line-height: 1;
   font-size: 3rem;
   margin: 1rem 0;
   position: relative;
-  z-index: 1;
 }
 
 .title::after {
@@ -46,4 +51,31 @@ img {
   left: -5px;
   border-radius: 0.2rem;
   z-index: -1;
+}
+
+.animeLeft {
+  opacity: 0;
+  transform: translateX(-20px);
+  animation: animeLeft 0.3s forwards;
+}
+
+@keyframes animeLeft {
+  to {
+    opacity: 1;
+    transform: initial;
+  }
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  min-height: calc(100vh + 10rem);
+}
+
+.AppBody {
+  flex: 1;
+}
+
+.VictoryContainer {
+  height: initial !important;
 }
