--- a/src/app/login/login.module.css
+++ b/src/app/login/login.module.css
@@ -35,7 +35,7 @@
 }
 
 .formSubtitle {
-  font-family: var(--font-title);
+  font-family: var(--type-second);
   line-height: 1;
   font-size: 2rem;
   margin-bottom: 2rem;
