--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,9 +1,12 @@
 .header {
   padding: 0 1rem;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-  position: fixed;
   width: 100%;
   background-color: #fff;
+  z-index: 1000;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 .header nav {
