--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,23 @@ img {
   height: auto;
 }
 
+button,
+input {
+  display: block;
+  font-size: 1rem;
+  font-family: var(--type-first);
+  color: #333;
+}
+
+a {
+  text-decoration: none;
+  color: #333;
+}
+
+ul {
+  list-style: none;
+}
+
 .container {
   max-width: 50rem;
   padding: 0 1rem;
