--- a/src/app/login/login.module.css
+++ b/src/app/login/login.module.css
@@ -8,7 +8,15 @@
   content: "";
   min-height: calc(100vh);
   background: url("/assets/login.jpg") no-repeat 50%;
+  background-position-y: 72%;
   background-size: cover;
+}
+
+.loginContent {
+  margin-top: 20vh;
+  max-width: 30rem;
+  padding: 1rem;
+  margin-bottom: 6rem;
 }
 
 .lostPassword {
@@ -53,7 +61,6 @@
   box-sizing: border-box;
   transition: 0.1s;
   width: max-content;
-  margin-bottom: 3.5rem;
 }
 
 .buttonRegister:hover,
