--- a/src/components/Form/Input.module.css
+++ b/src/components/Form/Input.module.css
@@ -1,11 +1,12 @@
 .label {
   display: block;
-  padding-bottom: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .input {
   display: block;
-  padding: 0.8rem;
+  padding: 0.75rem;
+  line-height: 1rem;
   border-radius: 0.4rem;
   width: 100%;
   border: 2px solid #eee;
@@ -19,10 +20,4 @@
   border-color: #fb1;
   background-color: #fff;
   box-shadow: 0 0 0 3px #fea;
-}
-
-.error {
-  color: #f31;
-  font-size: .875rem;
-  margin-top: .25rem;
 }
