--- a/src/components/Feed/Feed.module.css
+++ b/src/components/Feed/Feed.module.css
@@ -3,7 +3,6 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 1rem;
   margin-bottom: 1rem;
-  justify-items: center;
 }
 
 @media (max-width: 40rem) {
@@ -15,6 +14,8 @@
 .photo:nth-child(2) {
   grid-column: 2/4;
   grid-row: span 2;
+  width: auto;
+  height: auto;
 }
 
 @media (max-width: 40rem) {
@@ -33,6 +34,8 @@
 
 .photo img {
   grid-area: 1/1;
+  width: initial;
+  height: initial;
 }
 
 .visualizacao {
