--- a/src/components/Conta/ContaHeader.module.css
+++ b/src/components/Conta/ContaHeader.module.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 1fr auto;
   align-items: center;
+  margin-top: 1rem;
   margin-bottom: 2rem;
   position: relative;
 }
