--- a/src/components/photo/PhotoContent.module.css
+++ b/src/components/photo/PhotoContent.module.css
@@ -3,6 +3,7 @@
   grid-template-columns: 36rem 20rem;
   grid-template-rows: auto 1fr auto;
   margin: auto;
+  padding-top: 1rem;
   height: 36rem;
   border-radius: 0.2rem;
   background-color: white;
